// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`log output Group: logs Test: logs: log 1`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 464,
  "signed": false,
  "size": 12,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[49]:0x1668)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2cc1)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 2,
  "typeId": 1,
  "typeName": "String",
  "value": "Hello world!",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 2`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3472,
  "signed": true,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<i32> (wasm-function[53]:0x1719)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2cc5)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 7,
  "typeId": 0,
  "typeName": "i32",
  "value": 42,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 3`] = `
HostValue {
  "isNull": true,
  "keys": null,
  "negated": false,
  "nullable": true,
  "offset": 0,
  "pointer": 0,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3 | null> (wasm-function[60]:0x18d5)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2cc9)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 4`] = `
HostValue {
  "isNull": false,
  "keys": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 720,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "x",
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 784,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "y",
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 816,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "z",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3328,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[64]:0x19d2)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2cec)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 5`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3376,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[72]:0x2584)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2cfd)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 11,
  "typeId": 9,
  "typeName": "Array<i32>",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 6`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<i64> (wasm-function[76]:0x2635)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d07)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 7,
  "typeId": 0,
  "typeName": "i64",
  "value": "9999999999999",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 7`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<u32> (wasm-function[80]:0x26e2)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d0e)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 7,
  "typeId": 0,
  "typeName": "u32",
  "value": 1234567,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 8`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<u64> (wasm-function[84]:0x278f)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d17)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 7,
  "typeId": 0,
  "typeName": "u64",
  "value": "999999999999",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 9`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<i8> (wasm-function[88]:0x283c)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d1b)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 7,
  "typeId": 0,
  "typeName": "i8",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 10`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 2,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<i16> (wasm-function[92]:0x28e9)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d1f)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 7,
  "typeId": 0,
  "typeName": "i16",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 11`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:0x2996)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d23)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 12`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:0x2996)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d27)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 13`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3200,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[103]:0x2b0b)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d2b)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 11,
  "typeId": 3,
  "typeName": "Uint8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 0,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 2,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 14`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3264,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[108]:0x2c29)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d2f)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 11,
  "typeId": 4,
  "typeName": "Int8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 15`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1,
  "signed": false,
  "size": 0,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<(i: i32) => i32> (wasm-function[111]:0x2cb2)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d33)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 6,
  "typeId": 13,
  "typeName": "Function",
  "value": "assembly/jest-log/IdFunction",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 16`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1280,
  "signed": false,
  "size": 0,
  "stack": "    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[112]:0x2d67)
    at ../assembly/assembly/internal/call/__call (wasm-function[128]:0x2fad)",
  "type": 2,
  "typeId": 0,
  "typeName": "trace",
  "value": "trace: The thing! 1, 2, 3, 4, 5",
  "values": null,
}
`;

exports[`log output Group: logs: log 1`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 464,
  "signed": false,
  "size": 12,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[49]:0x1668)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2d9e)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 2,
  "typeId": 1,
  "typeName": "String",
  "value": "Hello world!",
  "values": null,
}
`;

exports[`log output Group: logs: log 2`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3472,
  "signed": true,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<i32> (wasm-function[53]:0x1719)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2da2)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 7,
  "typeId": 0,
  "typeName": "i32",
  "value": 42,
  "values": null,
}
`;

exports[`log output Group: logs: log 3`] = `
HostValue {
  "isNull": true,
  "keys": null,
  "negated": false,
  "nullable": true,
  "offset": 0,
  "pointer": 0,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3 | null> (wasm-function[60]:0x18d5)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2da6)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs: log 4`] = `
HostValue {
  "isNull": false,
  "keys": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 720,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "x",
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 784,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "y",
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 816,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "z",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3328,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[64]:0x19d2)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2dc9)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 5`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3376,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[72]:0x2584)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2dda)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 11,
  "typeId": 9,
  "typeName": "Array<i32>",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 6`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<i64> (wasm-function[76]:0x2635)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2de4)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 7,
  "typeId": 0,
  "typeName": "i64",
  "value": "9999999999999",
  "values": null,
}
`;

exports[`log output Group: logs: log 7`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<u32> (wasm-function[80]:0x26e2)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2deb)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 7,
  "typeId": 0,
  "typeName": "u32",
  "value": 1234567,
  "values": null,
}
`;

exports[`log output Group: logs: log 8`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<u64> (wasm-function[84]:0x278f)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2df4)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 7,
  "typeId": 0,
  "typeName": "u64",
  "value": "999999999999",
  "values": null,
}
`;

exports[`log output Group: logs: log 9`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<i8> (wasm-function[88]:0x283c)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2df8)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 7,
  "typeId": 0,
  "typeName": "i8",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs: log 10`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 2,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<i16> (wasm-function[92]:0x28e9)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2dfc)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 7,
  "typeId": 0,
  "typeName": "i16",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs: log 11`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:0x2996)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2e00)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 1,
  "values": null,
}
`;

exports[`log output Group: logs: log 12`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:0x2996)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2e04)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs: log 13`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3200,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[103]:0x2b0b)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2e08)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 11,
  "typeId": 3,
  "typeName": "Uint8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 0,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 2,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 14`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3264,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[108]:0x2c29)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2e0c)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 11,
  "typeId": 4,
  "typeName": "Int8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 15`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1,
  "signed": false,
  "size": 0,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x163a)
    at ../assembly/assembly/internal/log/log<(i: i32) => i32> (wasm-function[111]:0x2cb2)
    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2e10)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 6,
  "typeId": 13,
  "typeName": "Function",
  "value": "assembly/jest-log/IdFunction",
  "values": null,
}
`;

exports[`log output Group: logs: log 16`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1280,
  "signed": false,
  "size": 0,
  "stack": "    at start:assembly/jest-log~anonymous|0 (wasm-function[115]:0x2e44)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[117]:0x2e7b)
    at start:assembly/jest-log (wasm-function[118]:0x2ecc)
    at ~start (wasm-function[132]:0x2fd4)",
  "type": 2,
  "typeId": 0,
  "typeName": "trace",
  "value": "trace: The thing! 1, 2, 3, 4, 5",
  "values": null,
}
`;

exports[`log output Group: logs: todo 1`] = `"one"`;

exports[`log output Group: logs: todo 2`] = `"two"`;

exports[`log output Group: logs: todo 3`] = `"three"`;
